[package]
name = "blurt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rusqlite = "0.31"
tokio-rusqlite = "0.5"
hex = "0.4"
plist = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
webhook = ["reqwest"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[lib]
name = "blurt"
path = "src/lib.rs"
